# ai-tinkerers-hackathon

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  live_transcription.txt  package-lock.json  pyproject.toml  test_integration.py  test_speech_to_text.py
client/: MOCK_SERVER_README.md  README.md  index.html  mock-server.js  package-lock.json  package.json  tailwind.config.ts
client/src/: index.css
client/src/components/: AgentConfig.tsx  AudioDashboard.tsx  ConversationHistory.tsx  Recommendations.tsx  StatusIndicator.tsx
client/src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  input.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  (+10 more)
client/src/hooks/: useAudioCapture.ts  useWebSocket.ts
client/src/pages/: Index.tsx
docs/: Makefile  conf.py  index.rst  installation.rst
src/: demo_agent.py  demo_live_vad.py  live_vad.py  microphone_client.py  speech_to_text_module.py  websocket_server.py
src/Dedalus/: .env.example  call_tool.py  package-lock.json  package.json  requirements.txt
src/Dedalus/src/: cli.ts  client.ts  config.ts  index.ts  server.ts  speech-to-text-example.ts  speech-to-text.ts  speech_to_text_example.py  streaming-client-example.ts  streaming-client.ts  tsconfig.json  types.ts
src/dedalus_mcp/: __init__.py  server.py
src/src/: example_usage.py
(+5 files in other folders)
